# LearnOpenGL

./: .gitignore  CMakeLists.txt
src/: application.h  camera.h  globals.h  main.cpp  scene.h
src/geometries/: cube.cpp  cube.h  geometry.h  rectangle.cpp  rectangle.h  rectangle_texture.cpp  rectangle_texture.h  triangle.cpp  triangle.h
src/utils/: callbacks.h  shader.cpp  shader.h
